--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:crud": "concurrently \"npm run start:server\" \"npm run start:client\"",
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
     "start:server": "npm run start --prefix server",
     "start:client": "npm run start --prefix client"
   },
